[package]
name = "rest-api-tutorial"
version = "0.1.0"
edition = "2021"

# [profile.release]
# panic = "abort"

# [profile.dev]
# panic = "abort"

[dependencies]
axum = "0.6"
nix = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
